--- a/src/App.css
+++ b/src/App.css
@@ -102,13 +102,16 @@ body {
     background-color: #fff;
     position: fixed;
     top: 0;
-    right:-100%;
-    z-index: 1;
-    transition: 0.5s;
-    background-color: rgb(88, 67, 22);
+    overflow: auto;
+    right: -100%;
+    z-index: 10;
+    transition: right .8s ease-in-out;
+    background-color: rgb(76, 185, 231, 0.6);
+    backdrop-filter: blur(10px);
 }
-.sidebar.active{
-    right: 0;
+.active {
+  transition: right .8s ease-in-out;
+  right: 0
 }
 .sd-header{
     display: flex;
@@ -116,21 +119,7 @@ body {
     justify-content: space-between;
     padding: 15px;
 }
-.sidebar-overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.4);
-    transition: 0.5s;
-    opacity: 0;
-    visibility: visible;
-}
-.sidebar-overlay.active{
-    opacity: 1;
-    visibility: hidden;
-}
+
 .sd-body{
     padding: 15px;
     max-height: calc(100vh - 67px);
